# syslog-ng-3.4

./: configure.in  patch
b/: configure.in
lib/: stats.c  stats.h
modules/: Makefile.am
modules/afredis/: Makefile.am  afredis-grammar.c  afredis-grammar.h  afredis-grammar.y  afredis-grammar.ym  afredis-parser.c  afredis-parser.h  afredis.c  afredis.h
